# Game-Proglan-Sky-Hoopers

./: CMakeLists.txt  Makefile  README.md
src/: Game.cpp  Game.h  constants.h  main.cpp
src/entities/: Buff.cpp  Buff.h  DoublePointBuff.cpp  DoublePointBuff.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Portal.cpp  Portal.h  RocketBuff.cpp  RocketBuff.h  ShieldBuff.cpp  ShieldBuff.h
src/state/: GameState.cpp  GameState.h  GuideState.cpp  GuideState.h  MenuState.cpp  MenuState.h  State.h
